<resources>
    <string name="app_name">SQLite</string>
    <string name="hint_name">Please enter name</string>
    <string name="hint_cell">Please enter phone number</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_show_data">Show data</string>
    <string name="btn_edit_data">Edit data</string>
    <string name="btn_delete_data">Delete data</string>
    <string name="data">Data from database</string>
</resources>
